--- a/DEDORO_FINAL/DEDORO_FINAL.csproj
+++ b/DEDORO_FINAL/DEDORO_FINAL.csproj
@@ -33,8 +33,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Colorful.Console, Version=1.2.9.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Colorful.Console.1.2.9\lib\net461\Colorful.Console.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="ConsoleTables, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ConsoleTables.2.3.0\lib\net40\ConsoleTables.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MySql.Data, Version=8.0.18.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Speech" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,11 +54,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller.cs" />
+    <Compile Include="Database.cs" />
+    <Compile Include="Message.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserInterface.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="bin\Debug\Font\banner.flf" />
+    <None Include="bin\Debug\Font\big.flf" />
+    <None Include="bin\Debug\Font\block.flf" />
+    <None Include="bin\Debug\Font\bubble.flf" />
+    <None Include="bin\Debug\Font\digital.flf" />
+    <None Include="bin\Debug\Font\ivrit.flf" />
+    <None Include="bin\Debug\Font\lean.flf" />
+    <None Include="bin\Debug\Font\mini.flf" />
+    <None Include="bin\Debug\Font\script.flf" />
+    <None Include="bin\Debug\Font\shadow.flf" />
+    <None Include="bin\Debug\Font\slant.flf" />
+    <None Include="bin\Debug\Font\small.flf" />
+    <None Include="bin\Debug\Font\smscript.flf" />
+    <None Include="bin\Debug\Font\smshadow.flf" />
+    <None Include="bin\Debug\Font\smslant.flf" />
+    <None Include="bin\Debug\Font\standard.flf" />
+    <None Include="bin\Debug\Font\term.flf" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="bin\Debug\Font\readme.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
