--- a/DEDORO_FINAL/DEDORO_FINAL.csproj
+++ b/DEDORO_FINAL/DEDORO_FINAL.csproj
@@ -54,11 +54,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Animations.cs" />
     <Compile Include="Controller.cs" />
     <Compile Include="Database.cs" />
+    <Compile Include="HighScoreModel.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Snake.cs" />
     <Compile Include="UserInterface.cs" />
   </ItemGroup>
   <ItemGroup>
