--- a/DEDORO_FINAL/DEDORO_FINAL.csproj
+++ b/DEDORO_FINAL/DEDORO_FINAL.csproj
@@ -57,12 +57,14 @@
     <Compile Include="Animations.cs" />
     <Compile Include="Controller.cs" />
     <Compile Include="Database.cs" />
-    <Compile Include="HighScoreModel.cs" />
+    <Compile Include="Model\CustomerModel.cs" />
+    <Compile Include="Model\HighScoreModel.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Snake.cs" />
     <Compile Include="Sounds.cs" />
+    <Compile Include="Model\StudentGradeModel.cs" />
     <Compile Include="UserInterface.cs" />
   </ItemGroup>
   <ItemGroup>
