--- a/DEDORO_FINAL/DEDORO_FINAL.csproj
+++ b/DEDORO_FINAL/DEDORO_FINAL.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Animations.cs" />
+    <Compile Include="ColorGame.cs" />
     <Compile Include="Controller.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="Model\CustomerModel.cs" />
